Final layout with updated content

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
             </div>
             <div class="block-content">
                 <p>
-                    I'm a former printer, copier, and PC hardware field technician that has reinvented himself as a web
-                    developer. I've had a long-standing insterest in the field, and decided that it was a career that I
-                    would actually enjoy.
+                    I'm a former printer, copier, and PC hardware field technician that has reinvented himself as a web developer. I've had a long-standing insterest in the field, and decided that it was a career that I would actually enjoy.
+                </p>
+                <p>
+                    I'm currently learning front end development with HTML, CSS, and Javascript, but would eventually like to be a full stack developer.
                 </p>
             </div>
         </div>
@@ -48,21 +49,45 @@
                             src="./assets/images/horiseon.png" alt="Horiseon Site Refactor" /></a>
                     <div class="project-title">
                         <h3>Horiseon Site Refactor</h3>
-                        <p>HTML / CSS</p>
+                        <span>HTML / CSS</span>
                     </div>
                 </div>
-                <div class="secondary-project">
-                    <img src="assets/images/roscoe.jpg" alt="My dog Roscoe" />
-                    <div class="project-title">
-                        <h3>Coming Soon</h3>
-                        <p>TBD</p>
+                <div class="secondary-container">
+                    <div class="secondary-left-block">
+                        <div class="secondary-project">
+                            <img src="assets/images/roscoe.jpg" alt="My dog Roscoe" />
+                            <div class="project-title">
+                                <h3>Coming Soon</h3>
+                                <span>TBD</span>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="secondary-project">
-                    <img src="assets/images/jacky.jpg" alt="My dog Jacky" />
-                    <div class="project-title">
-                        <h3>Coming Soon</h3>
-                        <p>TBD</p>
+                    <div class="secondary-right-block">
+                        <div class="secondary-project">
+                            <img src="assets/images/jacky.jpg" alt="My dog Jacky" />
+                            <div class="project-title">
+                                <h3>Coming Soon</h3>
+                                <span>TBD</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="secondary-left-block">
+                        <div class="secondary-project">
+                            <img src="assets/images/roscoe2.jpg" alt="My dog Roscoe" />
+                            <div class="project-title">
+                                <h3>Coming Soon</h3>
+                                <span>TBD</span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="secondary-right-block">
+                        <div class="secondary-project">
+                            <img src="assets/images/jacky2.jpg" alt="My dog Jacky" />
+                            <div class="project-title">
+                                <h3>Coming Soon</h3>
+                                <span>TBD</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
