Added a footer to the HTML file and comments to HTML and CSS files

--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
             </ul>
         </nav>
     </header>
-    <section class="content">
-        <div id="about-me" class="block-container">
+    <main>
+        <!-- The About Me section starts here -->
+        <section id="about-me" class="block-container">
             <div class="block-title">
                 <h2>About Me</h2>
             </div>
@@ -38,12 +39,14 @@
                     I'm currently learning front end development with HTML, CSS, and Javascript, but would eventually like to be a full stack developer.
                 </p>
             </div>
-        </div>
-        <div id="work" class="block-container">
+        </section>
+        <!-- The Work section start here -->
+        <section id="work" class="block-container">
             <div class="block-title">
                 <h2>Work</h2>
             </div>
             <div class="block-content">
+                <!-- This is was the most recent project is displayed -->
                 <div class="primary-project">
                     <a href="https://tharveyster.github.io/horiseon-website-refactor/"><img
                             src="./assets/images/horiseon.png" alt="Horiseon Site Refactor" /></a>
@@ -52,6 +55,7 @@
                         <span>HTML / CSS</span>
                     </div>
                 </div>
+                <!-- This is where the remaining projects are displayed -->
                 <div class="secondary-container">
                     <div class="secondary-left-block">
                         <div class="secondary-project">
@@ -91,8 +95,9 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div id="contact-me" class="block-container">
+        </section>
+        <!-- The Contact Me section starts here -->
+        <section id="contact-me" class="block-container">
             <div class="block-title">
                 <h2>Contact Me</h2>
             </div>
@@ -107,10 +112,10 @@
                     <a href="https://github.com/tharveyster/"> GitHub </a>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </main>
     <footer>
-
+        This page was created by Todd Harvey.
     </footer>
 </body>
 
