Fixed minor issues and typos and finished the readme file

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/css/reset.css">
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Todd Harvey's Web Development Portfolio</title>
@@ -33,7 +34,7 @@
             </div>
             <div class="block-content">
                 <p>
-                    I'm a former printer, copier, and PC hardware field technician that has reinvented himself as a web developer. I've had a long-standing insterest in the field, and decided that it was a career that I would actually enjoy.
+                    I'm a former printer, copier, and PC hardware field technician that has reinvented himself as a web developer. I've had a long-standing interest in the field, and decided that it was a career that I would actually enjoy.
                 </p>
                 <p>
                     I'm currently learning front end development with HTML, CSS, and Javascript, but would eventually like to be a full stack developer.
