Added LinkIn to list of contact options

--- a/index.html
+++ b/index.html
@@ -112,6 +112,9 @@
                 <div class="contact-info">
                     <a href="https://github.com/tharveyster/"> GitHub </a>
                 </div>
+                <div class="contact-info">
+                    <a href="https://www.linkedin.com/in/todd-harvey-147410b5">LinkedIn</a>
+                </div>
             </div>
         </section>
     </main>
