Made minor formatting changes to enhance viewer experience

--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
             </div>
             <div class="block-content">
                 <p>
-                    I'm a former printer, copier, and PC hardware field technician that has reinvented himself as a web developer. I've had a long-standing interest in the field, and decided that it was a career that I would actually enjoy.
+                    I'm a former printer, copier, and PC hardware field technician that has reinvented himself as a web
+                    developer. I've had a long-standing interest in the field, and decided that it was a career that I
+                    would actually enjoy.
                 </p>
                 <p>
-                    I'm currently learning front end development with HTML, CSS, and Javascript, but would eventually like to be a full stack developer.
+                    I'm currently learning front end development with HTML, CSS, and Javascript, but would eventually
+                    like to be a full stack developer.
                 </p>
             </div>
         </section>
@@ -104,16 +107,16 @@
             </div>
             <div class="block-content">
                 <div class="contact-info">
-                    443-586-6672
+                    <span>443-586-6672</span>
                 </div>
                 <div class="contact-info">
-                    tharveyster@gmail.com
+                    <span>tharveyster@gmail.com</span>
                 </div>
                 <div class="contact-info">
-                    <a href="https://github.com/tharveyster/"> GitHub </a>
+                    <span><a href="https://github.com/tharveyster/"> GitHub </a></span>
                 </div>
                 <div class="contact-info">
-                    <a href="https://www.linkedin.com/in/todd-harvey-147410b5">LinkedIn</a>
+                    <span><a href="https://www.linkedin.com/in/todd-harvey-147410b5">LinkedIn</a></span>
                 </div>
             </div>
         </section>
